tests/src/frontend/typechecking/invalid/infer_frozen_cla_5.sk
class Foo<T: frozen>(T) {
  fun test(x: Array<T>): mutable this {
    mutable Foo(x[0])
  }
}

fun test(): void {
  Foo(mutable Array[0]).test(Array[])
}
